[package]
name = "cmd-tunnel"
version = "0.1.0"
authors = ["Rajasekharan Vengalil <avranju@nerdworks.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cmd-tunnel-server"
path = "src/server.rs"

[[bin]]
name = "cmd-tunnel-client"
path = "src/client.rs"

[dependencies]
console = "0.14"
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process"] }
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.4"
