[package]
name = "cmd-tunnel"
version = "0.1.0"
authors = ["Rajasekharan Vengalil <avranju@nerdworks.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cmd-tunnel-server"
path = "src/server.rs"

[[bin]]
name = "cmd-tunnel-client"
path = "src/client.rs"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
console = "0.15"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process"] }
tokio-stream = "0.1"
tonic = "0.10"

[build-dependencies]
tonic-build = "0.10"
